compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_array_utf8_and_unit.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let x = <<\"test\":unit(5)>> x"
---
----- SOURCE CODE
let x = <<"test":unit(5)>> x

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:1
  │
1 │ let x = <<"test":unit(5)>> x
  │ ^ Unit cannot be specified here

Hint: utf8 segments are sized based on their value and cannot have a unit.
See: https://tour.gleam.run/data-types/bit-arrays/
