compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_string.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 136
expression: "case <<1>> { <<2.0, a>> -> 1 }"
---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:16
  │
1 │ case <<1>> { <<2.0, a>> -> 1 }
  │                ^^^

Expected type:

    Int

Found type:

    Float

