compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_string_guard.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 257
expression: "case <<1>> { <<a:utf16_codepoint>> if a == \"test\" -> 1 }"
---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:39
  │
1 │ case <<1>> { <<a:utf16_codepoint>> if a == "test" -> 1 }
  │                                       ^^^^^^^^^^^

Expected type:

    UtfCodepoint

Found type:

    String

